--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="body">
     <header>
         <!-- Navigation Contact -->
+        <div class="container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
             <ul class="list">
@@ -27,13 +28,17 @@
                 <li> <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+    </div>
     </header>
     <main>
         <section class="section-effective">
+            <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
+    </div>
         </section>
         <section>
+            <div class="container">
             <h2>Advantages</h2>
             <ul class="list">
                 <li>
@@ -53,8 +58,10 @@
                     <p class="advan-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section-team">
+            <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="list">
                 <li class="team-list">
@@ -78,8 +85,10 @@
                     <p class="job-name">UI Designer</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section>
+            <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="list">
                 <li>
@@ -113,13 +122,16 @@
                     <p class="portfolio-change">Marketing</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
     <p class="text-footer">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
+    </div>
     </footer>
 </body>
 </html>
