--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             <div class="container">
-            <h2>Advantages</h2>
+            <h2 class="visually-hidden">Advantages</h2>
             <ul class="list">
                 <li>
                     <h3 class="advantages">Strategy</h3>
