--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
-            <ul class="list">
+            <ul class="nav-list list">
                 <li> <a class="navigation-link link" href="./index.html">Studio</a></li>
                 <li> <a class="navigation-link link" href="">Portfolio</a></li>
                 <li> <a class="navigation-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="adress">
-            <ul class="list">
+            <ul class="nav-list list">
                 <li> <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li> <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
