--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
     <header>
         <!-- Navigation Contact -->
-        <div class="container">
+        <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
             <ul class="nav-list list">
@@ -38,7 +38,7 @@
     </div>
         </section>
         <section>
-            <div class="container">
+            <div class="advan-conteiner container">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="list">
                 <li>
