--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </div>
         </section>
         <section>
-            <div class="advan-conteiner container">
+            <div class="advan-container container">
             <h2 class="visually-hidden">Advantages</h2>
-            <ul class="list">
+            <ul class="advan-list list">
                 <li>
                     <h3 class="advantages">Strategy</h3>
                     <p class="advan-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
