--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
-            <ul class="list">
+            <ul class="team-container list">
                 <li class="team-list">
                     <img class="worker-photo" src="./images/Our_Team/img-1.jpg" alt="Mark Guerrero">
                     <h3 class="name-team">Mark Guerrero</h3>
@@ -90,36 +90,36 @@
         <section>
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
-            <ul class="list">
+            <ul class="portfolio-container list">
                 <li>
                     <img src="./images/Our_Portfolio/1-banking.jpg" alt="banking" width="360">
-                    <h3 class="portfolio-app">Banking App</h3>
-                    <p class="portfolio-change">App</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Banking App</h3>
+                    <p class="portfolio-change">App</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/2-cashless.jpg" alt="cachless" width="360">
-                    <h3 class="portfolio-app">Cashless Payment</h3>
-                    <p class="portfolio-change">Marketing</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Cashless Payment</h3>
+                    <p class="portfolio-change">Marketing</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/3-meditation.jpg" alt="meditation" width="360">
-                    <h3 class="portfolio-app">Meditation App</h3>
-                    <p class="portfolio-change">App</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Meditation App</h3>
+                    <p class="portfolio-change">App</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/4-taxi.jpg" alt="taxi" width="360">
-                    <h3 class="portfolio-app">Taxi Service</h3>
-                    <p class="portfolio-change">Marketing</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Taxi Service</h3>
+                    <p class="portfolio-change">Marketing</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/5-screen.jpg" alt="screen" width="360">
-                    <h3 class="portfolio-app">Screen Illustrations</h3>
-                    <p class="portfolio-change">Design</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Screen Illustrations</h3>
+                    <p class="portfolio-change">Design</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/6-oncourses.jpg" alt="oncourses" width="360">
-                    <h3 class="portfolio-app">Online Courses</h3>
-                    <p class="portfolio-change">Marketing</p>
+                    <div class="img-padding"><h3 class="portfolio-app">Online Courses</h3>
+                    <p class="portfolio-change">Marketing</p></div>
                 </li>
             </ul>
             </div>
