--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
             <ul class="team-container list">
                 <li class="team-list">
                     <img class="worker-photo" src="./images/Our_Team/img-1.jpg" alt="Mark Guerrero">
-                    <h3 class="name-team">Mark Guerrero</h3>
-                    <p class="job-name">Product Designer</p>
+                    <div class="team-img-padding"><h3 class="name-team">Mark Guerrero</h3>
+                    <p class="job-name">Product Designer</p></div>
                 </li>
                 <li class="team-list">
                     <img class="worker-photo" src="./images/Our_Team/img-2.jpg" alt="Tom Ford">
-                    <h3 class="name-team">Tom Ford</h3>
-                    <p class="job-name">Frontend Developer</p>
+                    <div class="team-img-padding"><h3 class="name-team">Tom Ford</h3>
+                    <p class="job-name">Frontend Developer</p></div>
                 </li>
                 <li class="team-list">
                     <img class="worker-photo" src="./images/Our_Team/img-3.jpg" alt="Camila Garcia">
-                    <h3 class="name-team">Camila Garcia</h3>
-                    <p class="job-name">Marketing</p>
+                    <div class="team-img-padding"><h3 class="name-team">Camila Garcia</h3>
+                    <p class="job-name">Marketing</p></div>
                 </li>
                 <li class="team-list">
                     <img class="worker-photo" src="./images/Our_Team/img-4.jpg" alt="Daniel Wilson">
-                    <h3 class="name-team">Daniel Wilson</h3>
-                    <p class="job-name">UI Designer</p>
+                    <div class="team-img-padding"><h3 class="name-team">Daniel Wilson</h3>
+                    <p class="job-name">UI Designer</p></div>
                 </li>
             </ul>
         </div>
@@ -93,32 +93,32 @@
             <ul class="portfolio-container list">
                 <li>
                     <img src="./images/Our_Portfolio/1-banking.jpg" alt="banking" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Banking App</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Banking App</h3>
                     <p class="portfolio-change">App</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/2-cashless.jpg" alt="cachless" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Cashless Payment</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Cashless Payment</h3>
                     <p class="portfolio-change">Marketing</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/3-meditation.jpg" alt="meditation" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Meditation App</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Meditation App</h3>
                     <p class="portfolio-change">App</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/4-taxi.jpg" alt="taxi" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Taxi Service</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Taxi Service</h3>
                     <p class="portfolio-change">Marketing</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/5-screen.jpg" alt="screen" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Screen Illustrations</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Screen Illustrations</h3>
                     <p class="portfolio-change">Design</p></div>
                 </li>
                 <li>
                     <img src="./images/Our_Portfolio/6-oncourses.jpg" alt="oncourses" width="360">
-                    <div class="img-padding"><h3 class="portfolio-app">Online Courses</h3>
+                    <div class="portfolio-img-padding"><h3 class="portfolio-app">Online Courses</h3>
                     <p class="portfolio-change">Marketing</p></div>
                 </li>
             </ul>
