--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="button-effective" type="button">Order Service</button>
     </div>
         </section>
-        <section>
+        <section class="advan-section">
             <div class="advan-container container">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="advan-list list">
@@ -87,7 +87,7 @@
             </ul>
         </div>
         </section>
-        <section>
+        <section class="portfolio-section">
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="portfolio-container list">
