--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
-    <header>
+    <header class="header">
         <!-- Navigation Contact -->
         <div class="header-container container">
         <nav class="navigation">
