--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </div>
         </section>
         <section class="portfolio-section">
-            <div class="container">
+            <div class="portfolio-container container">
             <h2 class="table-portfolio">Our Portfolio</h2>
-            <ul class="portfolio-container list">
+            <ul class="portfolio-list list">
                 <li>
                     <img src="./images/Our_Portfolio/1-banking.jpg" alt="banking" width="360">
                     <div class="portfolio-img-padding"><h3 class="portfolio-app">Banking App</h3>
