--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         </section>
         <section class="portfolio-section">
-            <div class="portfolio-container container">
+            <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list list">
                 <li>
